# cpp_labs_5_semester

./: .gitignore  CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp  plugin_system.cpp  plugin_system.h  token.h
calculator/: .gitignore  CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  plugin_system.cpp  plugin_system.h  token.h
calculator/plugins/: func1.cpp  func2.cpp
